# rust-version-updater

./: Cargo.toml  README.md  example.config.toml  updater_config.toml
src/: branch.rs  cli.rs  config.rs  custom_error.rs  history.rs  logger.rs  loginer.rs  main.rs  patcher.rs  rebuilder.rs  version.rs
src/workers/: branch.rs  history.rs  loginer.rs  mod.rs  patcher.rs  rebuilder.rs  version.rs
